@@ -14,6 +14,8 @@ devscripts (2.10.19) UNRELEASED; urgency=low
       disown, builtin, set -[BHT], alias -p, unalias -a, local with
       options or an assigned value and $BASH(_*). Thanks to Raphael
       Geissert for the patch (Closes: #469050)
+    + Modify each of the simple shell variable tests (e.g. $RANDOM) to
+      also match ${variable}
 
  -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 01 Mar 2008 11:42:02 +0000
 
